--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.AlkeWallet"
         tools:targetApi="31">
         <activity
+            android:name=".Profile_Page_acitivity"
+            android:exported="false" />
+        <activity
             android:name=".Send_Money_Activity"
             android:exported="false"
             android:theme="@style/Theme.AlkeWallet" />
